Fix lobby and more

--- a/client/enter_name.html
+++ b/client/enter_name.html
@@ -26,6 +26,7 @@
         <label for="name">Name:</label><br>
         <input type="text"  id ="name" name="name"><br>
         <input type="hidden" id="code" name="code">
+        <input type="hidden" id="host" name="host">
         <button type="submit" >Enter Name</button>
     </form>
     
