--- a/client/enter_name.html
+++ b/client/enter_name.html
@@ -23,11 +23,10 @@
     <h1 style= text-align:center;>Enter name</h1>
 
     <form style="margin-bottom: 0px; text-align: center;" method="POST">
-        <label for="name">Name:</label><br>
-        <input type="text"  id ="name" name="name"><br>
+        <input type="text" id="name" name="name" placeholder="Enter Name"><br>
         <input type="hidden" id="code" name="code">
         <input type="hidden" id="host" name="host">
-        <button type="submit" >Enter Name</button>
+        <button type="submit" >Enter</button>
     </form>
     
     <script src="scripts/enter_name.js" type="module"></script>
