--- a/client/join_game.html
+++ b/client/join_game.html
@@ -12,7 +12,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title id = "join">Join Game</title>
+    <title>Join Game</title>
     <link rel="stylesheet" href="styles/join_game.css">
 </head>
 
@@ -20,11 +20,12 @@
     <div class="title_container">
         <h1><img style= "width:3%; height:3%;"  src ="https://gilkalai.files.wordpress.com/2017/09/dice.png?w=640">Yahtzee <img style= "width:3%; height:3%;"  src ="https://gilkalai.files.wordpress.com/2017/09/dice.png?w=640"></h1>
     </div>
-    <h1> Join Game </h1>
-    <form method = "POST">
-        <input type="text" id="code" name="code" style= "width:9.5% ; height:100%;"  placeholder="Enter Code">
+    <h1 style= text-align:center;>Join game</h1>
+    
+    <form method="POST" style="margin-bottom: 0px; text-align: center;">
+        <input type="text" id="code" name="code" placeholder="Enter Code">
         <br>
-        <input class= "entry" style= "width:10% ; height:10%;" type="submit" value="Enter"></input>
+        <input type="submit" value="Enter"></input>
     </form>
     
     <script src="scripts/join_game.js" type="module"></script>
