--- a/client/lobby.html
+++ b/client/lobby.html
@@ -23,8 +23,8 @@
         
         
     <div>
-    <h1 class="header" style= text-align:center;>Lobby</h1>
-    <h2 class= code style= text-align:center; id = 'code'>Code: XXXX</h2>
+    <h1 class="header" style="color:black;"">Lobby</h1>
+    <h2 class= code style="text-align:center;"" id = 'code'>Code: XXXX</h2>
     <table class="Players center" id = 'table'>
         <thead>
             <th>Player Name</th>
