--- a/client/game.html
+++ b/client/game.html
@@ -39,92 +39,92 @@
             <tbody>
                 <tr>
                     <td>
-                        <span>Ones:</span>
+                        <span>Ones</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Twos:</span>
+                        <span>Twos</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Threes:</span>
+                        <span>Threes</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Fours:</span>
+                        <span>Fours</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Fives:</span>
+                        <span>Fives</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Sixes:</span>
+                        <span>Sixes</span>
                     </td>
                 </tr>
                 <tr class="separating_line">
                     <td>
-                        <span>Sum:</span>
+                        <span>Sum</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Bonus:</span>
+                        <span>Bonus</span>
                     </td>
                 </tr>
                 <tr class="separating_line">
                     <td>
-                        <span>Top half:</span>
+                        <span>Top half</span>
                     </td>
                 </tr>
                 <tr class="separating_line">
                     <td>
-                        <span>Three of a kind:</span>
+                        <span>Three of a kind</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Four of a kind:</span>
+                        <span>Four of a kind</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Full House:</span>
+                        <span>Full House</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Small Straight:</span>
+                        <span>Small Straight</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>High Straight:</span>
+                        <span>Large Straight</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Yahtzee:</span>
+                        <span>Yahtzee</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span>Chance:</span>
+                        <span>Chance</span>
                     </td>
                 </tr>
                 <tr class="separating_line">
                     <td>
-                        <span>Bottom half:</span>
+                        <span>Bottom half</span>
                     </td>
                 </tr>
                 <tr class="separating_line">
                     <td>
-                        <span>Total:</span>
+                        <span>Total</span>
                     </td>
                 </tr>
             </tbody>
