--- a/client/lobby.html
+++ b/client/lobby.html
@@ -30,7 +30,7 @@
             <th>Player Name</th>
         </thead>
         <tbody>
-            <tr>
+            <!-- <tr>
                 <td>
                     <span class = "PlayerName"> Player 1:</span>
                 </td>
@@ -51,7 +51,7 @@
                     <span class ="PlayerName">Player 4:</span>
                 </td>
                 
-            </tr>
+            </tr> -->
         </tbody>
     </table> <br><br>
     
@@ -59,7 +59,7 @@
         <input type="hidden" id="code-input" name="code">
         <input type="hidden" id="player-input" name="player">
         <input type="hidden" id="host-input" name="host">
-        <input type="submit" text="Start" class="main-button" id="start-input">
+        <input type="submit" value="Start Game" class="main-button" id="start-input">
     </form>
 
     <script src="scripts/lobby.js" type="module"></script>
